# bergen-smart-rain-hub

./: .gitignore  README.md  pyproject.toml
backend/: analysis.py  climate.py  config.py  database.py  economics.py  frost_client.py  lonnsomhet.py  pipeline.py  risk.py  scales.py
data/: rain.db
frontend/: app.py
frontend/pages/: 1_vannberedskap.py  2_energipotensial.py  3_risikovurdering.py  4_kostnadsanalyse.py  5_passiv_kjoling.py  6_varmesystem.py  7_lonnsomhet.py  energy_savings.py  water_savings.py
tests/: test_analysis.py  test_climate.py  test_cooling.py  test_database.py  test_economics.py  test_heatpump.py  test_lonnsomhet.py  test_reserve.py  test_risk.py  test_scales.py  test_temperature.py
